packages/webassemblyjs/test/fixtures/type-errors/load16_s/module.wast
(module (memory 1) (func (result i32) (i32.load16_s (f32.const 0))))
